slide/src/test/ui/error/pattern/var_pat_in_expr.slide
===in
1 + $var
===in

~~~stdout
~~~stdout

~~~stderr
error[P0004]: Patterns cannot be used in an expression
  |
1 | 1 + $var 
  |     ^^^^ unexpected pattern
  |
  = help: consider using "var" as a variable
~~~stderr

~~~exitcode
1
~~~exitcode
